# Laba1

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
lib/: lr1.cpp  lr1.h
services/: CMakeLists.txt
services/file/: CMakeLists.txt  file_test.cpp  file_test.h
services/tests/: CMakeLists.txt  generate_tests.cpp  generate_tests.h
tests/: CMakeLists.txt  lr1_tests.cpp
